# client-rs

./: .gitignore  Cargo.toml  README.md
examples/basic/: config.example.rs  main.rs
src/: client.rs  lib.rs
src/types/: entity.rs  events.rs  mod.rs  payload.rs
